두번째 커밋

--- a/src/style.css
+++ b/src/style.css
@@ -340,3 +340,8 @@ ul.search-results {
     -webkit-animation-name: search-leave;
     animation-name: search-leave;
 }
+
+.nav-style{
+    padding-left: 20px;
+    padding-right: 20px;
+}
